CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( NLLSQ )

SET( CMAKE_BUILD_TYPE Debug )
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )
SET( CMAKE_CXX_FLAGS "-std=c++11" )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )
